# study-manager-api

./: .gitignore  Makefile  README.md  pyproject.toml
src/study_manager/: __init__.py
src/study_manager/adapters/repositories/in_memory/: in_memory_subject_repository.py
src/study_manager/domain/exceptions/: base.py  subject_errors.py  topic_errors.py  user_errors.py
src/study_manager/domain/models/: subject.py  topic.py  user.py
src/study_manager/domain/validators/: identity_validators.py  subject_validators.py  topic_validators.py  user_validators.py
src/study_manager/ports/repositories/: subject_repository.py
tests/adapters/repositories/in_memory/: test_in_memory_subject_repository.py
tests/domain/: test_subject.py  test_topic.py  test_user.py
