[project]
name = "study-manager-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
]

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "study_manager"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ty>=0.0.52",
]
