[project]
name = "study-manager-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "study_manager"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.19",
    "taskipy>=1.14.1",
    "ty>=0.0.52",
]

[tool.taskipy.tasks]
format = "ruff format"
lint = "ruff check"
typecheck = "ty check"
test = "python -m pytest tests"
check = "task format && task lint && task typecheck && task test"
